Add car manufacturers api test